# ModbusSniffer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yaml  pyproject.toml  requirements-docs.txt
.github/workflows/: deploy_app_page.yml
docs/: api.md  api.pl.md  index.md  index.pl.md  installation.md  installation.pl.md
docs/js/: mermaid-init.js
src/modbus_sniffer/: gui.py  main_logger.py  modbus_parser_new.py  serial_snooper.py
tests/: test_csv_logger.py  test_guiapp.py  test_main_logger.py  test_modbus_snooper.py  test_parser.py  test_snifferworker.py
